<resources>
    <string name="app_name">MyNXP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_blog">Blog</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_idea">Idea</string>
    <string name="helloworld">Hello World!</string>
    <string name="title_activity_idea">IdeaActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_rating">Rating</string>
    <string name="title_hr_selfservice">HR Selfservice</string>
    <string name="shiftchangerequest">Request Shift Change</string>
    <string name="leaverequest">Leave Request</string>
    <string name="payslip">Show Last Pay Slip</string>
    <string name="title_news">News</string>
    <string name="no_videos_to_watch">No Videos to watch</string>
    <string name="yes">Yes</string>
    <string name="no_phone_changed">No, I have changed my phone</string>
    <string name="update">Update</string>
    <string name="news">News</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications_received">No notifications received</string>
</resources>
