<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_blog"
        android:icon="@drawable/ic_pencil_black_24dp"
        android:title="@string/title_blog" />

    <item
        android:id="@+id/navigation_newspaper"
        android:icon="@drawable/ic_newspaper_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_rating"
        android:icon="@drawable/ic_rating_black_24dp"
        android:title="@string/title_rating" />

    <item
        android:id="@+id/navigation_briefcase"
        android:icon="@drawable/ic_briefcase_black_24dp"
        android:title="@string/title_hr_selfservice" />

    <item
        android:id="@+id/navigation_idea"
        android:icon="@drawable/ic_idea_black_24dp"
        android:title="@string/title_idea" />

</menu>
