<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liferay.nxp1.SelfserviceFragment">


 <!-- to make it look fancy we can put a grid with icons here -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/shiftchangebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shiftchangerequest" />

        <Button
            android:id="@+id/leaverequestbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaverequest" />

        <Button
            android:id="@+id/payslipbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payslip" />


    </LinearLayout>

</FrameLayout>
